--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 <h5>About me</h5>
                 <p>I am Maddie Hoffer from Long Island, New York. Growing up I was a competitive gymnast and both my
                     parents worked. So, my sisters and I took care of ourselves a lot after school...</p>
-                <button id="about"><a href="#">Learn More</a></button>
+                <button id="about"><a href="about.html">Learn More</a></button>
             </div>
         </div>
     </section>
